S7Ncms Changelog

0.7 (still in development)

0.6 (2007-12-08)
	- fixed media controller to force files loading from browser cache
	- fixed router hook to work with newest changes in kohana framework
	- fixed router hook to work with database table prefixes
	- fixed authorization to work with newest changes in kohana framework
	- added S7Ncms installer
	- added controller to edit cms settings
	- cleaned up the sql dump
	- build in ability to share configs, libraries, helpers, etc between
	  administration and frontend application
	- pages can have different views now

0.5 (2007-11-26)
    - First release